orders search and filter

--- a/frontend/src/css/Profile.css
+++ b/frontend/src/css/Profile.css
@@ -310,7 +310,7 @@
   top: 5rem;
   z-index: 999;
   border-radius: 1rem;
-
+  min-height: 30rem;
   text-align: left;
   padding-bottom: 1rem;
 }
@@ -359,6 +359,7 @@
   background: rgb(251, 251, 251);
   width: 45vw;
   border-radius: 1rem;
+  margin-top: -22rem;
 }
 
 .editparent .editsprofs .editprofdocs {
@@ -387,6 +388,7 @@
   border-radius: 0.5rem;
   width: 8vw;
   height: 3rem;
+  margin-top: 4rem;
   font-weight: 700;
   font-size: 0.8vw;
 }
@@ -612,7 +614,11 @@
     width: 35%;
     margin-left: 40%;
   }
-
+  .editparent .editsprofs h2 {
+    margin: auto;
+    margin-left: 35vw;
+    margin-bottom: 2rem;
+}
   .procont .proco p .burst {
     background: rgb(255, 255, 255);
     margin-top: 2rem;
@@ -649,6 +655,9 @@
     background: rgb(251, 251, 251);
     width: 94vw;
     border-radius: 1rem;
+    min-height: 30rem;
+    margin-top: -24rem;
+  
   }
 
   .editparent .imgprof.active {
