--- a/frontend/src/css/Orders.css
+++ b/frontend/src/css/Orders.css
@@ -288,6 +288,13 @@
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+#filterStatus{
+  width: 12%;
+  margin-right: 2rem;
+  border-radius: 0.5rem;
+  border: 2px solid #48b0df;
+  text-align: center;
+}
 
 #req_button:hover {
   background-image: linear-gradient(-180deg, rgb(3, 198, 0) 0%, #00d736 100%);
