--- a/frontend/src/css/Annoucement.css
+++ b/frontend/src/css/Annoucement.css
@@ -114,7 +114,7 @@
   background: #3657a7;
 }
 .announce .anc li:first-child {
-  background: #3657a7;
+  background: #3da8da;
   color: white;
   width: 90%;
 }
@@ -232,8 +232,9 @@
 }
 .AForm #title {
   width: 70%;
+  font-size: 1rem;
   padding: auto;
-  height: 1.5rem;
+  height: 3rem;
   text-align: center;
   border-radius: 0.5rem;
 }
@@ -248,7 +249,7 @@
   width: 70%;
   height: 3rem;
   margin-top: 1rem;
-  background: #f8feff;
+  background: #ddefff;
 }
 
 .AForm input:focus {
