--- a/frontend/src/css/Modal.css
+++ b/frontend/src/css/Modal.css
@@ -25,6 +25,12 @@ h2 {
   border: none;
   border-radius: 5px;
 }
+#dkijajcac{
+  margin-left: 0;
+  text-align: left;
+  
+  
+}
 
 #title {
   font-size: 1.7rem;
