--- a/frontend/src/css/Profile.css
+++ b/frontend/src/css/Profile.css
@@ -369,6 +369,7 @@
 
 .editparent .editsprofs .editprofdocs {
   padding-left: 10vw;
+  min-height: 20rem;
 }
 
 .editparent .editsprofs .editprofdocs input {
